Working on abstract
git-svn-id: https://microb98.med.upenn.edu/svn/scott/thesis@9937 acd2042c-187b-11de-8279-d8d34a11d372

--- a/thesis/makefile
+++ b/thesis/makefile
@@ -1,4 +1,4 @@
-all: sherrill-Mix_thesis.pdf
+all: sherrill-Mix_thesis.pdf sherrill-Mix_abstract.txt
 
 sherrill-Mix_thesis.pdf: sherrill-Mix_thesis.tex */*.tex headMatter.tex penn_thesis_style.sty appendices/*/*.tex
 	pdflatex -output-directory tmp sherrill-Mix_thesis
@@ -6,3 +6,7 @@ sherrill-Mix_thesis.pdf: sherrill-Mix_thesis.tex */*.tex headMatter.tex penn_the
 	pdflatex -output-directory tmp sherrill-Mix_thesis
 	pdflatex -output-directory tmp sherrill-Mix_thesis
 	cp tmp/sherrill-Mix_thesis.pdf .
+
+sherrill-Mix_abstract.txt: sherrill-Mix_thesis.tex 
+	./generateAbstract.bash sherrill-Mix_thesis.tex>sherrill-Mix_abstract.txt
+
