Working on abstract
git-svn-id: https://microb98.med.upenn.edu/svn/scott/thesis@9945 acd2042c-187b-11de-8279-d8d34a11d372

--- a/thesis/makefile
+++ b/thesis/makefile
@@ -7,6 +7,6 @@ sherrill-Mix_thesis.pdf: sherrill-Mix_thesis.tex */*.tex headMatter.tex penn_the
 	pdflatex -output-directory tmp sherrill-Mix_thesis
 	cp tmp/sherrill-Mix_thesis.pdf .
 
-sherrill-Mix_abstract.txt: sherrill-Mix_thesis.tex 
+sherrill-Mix_abstract.txt: sherrill-Mix_thesis.tex generateAbstract.bash
 	./generateAbstract.bash sherrill-Mix_thesis.tex>sherrill-Mix_abstract.txt
 
