acein26 primer table in
git-svn-id: https://microb98.med.upenn.edu/svn/scott/thesis@10040 acd2042c-187b-11de-8279-d8d34a11d372

--- a/thesis/makefile
+++ b/thesis/makefile
@@ -1,6 +1,6 @@
 all: sherrill-Mix_thesis.pdf sherrill-Mix_abstract.txt
 
-sherrill-Mix_thesis.pdf: sherrill-Mix_thesis.tex */*.tex headMatter.tex penn_thesis_style.sty appendices/*/*.tex
+sherrill-Mix_thesis.pdf: sherrill-Mix_thesis.tex */*.tex penn_thesis_style.sty appendices/*/*.tex
 	pdflatex -output-directory tmp sherrill-Mix_thesis
 	bibtex tmp/sherrill-Mix_thesis
 	pdflatex -output-directory tmp sherrill-Mix_thesis
